# Everything-Manager

./: .envrc  .ghci  CHANGELOG.md.save0  Everything-Manager.cabal  Everything-Manager.cabal.rej  Everything.drawio  Everything.hs  Main.hs  README.md  default.nix  everythingmanager.sql  hie.yaml  install.hs  install.ps1  install.sh  package-lock.json  package.json  project.nix  shell.nix  stack.yaml
Lib/: Connection.hs  EverythingManager.hs
nix/: sources.json
test/: TestEverythingManager.hs
